# infinite-craft-logger

./: Cargo.toml  Dockerfile
.github/workflows/: ci.yml  release.yml
src/: main.rs
