[package]
name = "infinite-craft-logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
clap = { version = "4.5.31", features = ["derive", "env"] }
dirs = "6.0.0"
once_cell = "1.20.3"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.43.0", features = ["macros"] }
